chore: create window, style, ui, page subdirectories feat: HomePage, open folder in chapter viewer

--- a/gui/ComicTranslator/ui/mainwindow.ui
+++ b/gui/ComicTranslator/ui/mainwindow.ui
@@ -95,7 +95,7 @@
              <item>
               <widget class="QLabel" name="label">
                <property name="text">
-                <string>Source directory:</string>
+                <string>Source:</string>
                </property>
               </widget>
              </item>
