style(gui): Create style template for home page and viewer

--- a/gui/Transcan/asset.qrc
+++ b/gui/Transcan/asset.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>asset/img/loading.gif</file>
+        <file>asset/img/downArrow.svg</file>
+        <file>asset/font/Inter.ttf</file>
     </qresource>
 </RCC>
