--- a/gui/Transcan/asset.qrc
+++ b/gui/Transcan/asset.qrc
@@ -4,5 +4,18 @@
         <file>asset/img/downArrow.svg</file>
         <file>asset/font/Inter.ttf</file>
         <file>asset/img/leftArrow.svg</file>
+        <file>asset/font/regular/augie.ttf</file>
+        <file>asset/font/regular/Felt Regular.ttf</file>
+        <file>asset/font/regular/mangat.ttf</file>
+        <file>asset/font/regular/mangatb.ttf</file>
+        <file>asset/font/regular/mangati.ttf</file>
+        <file>asset/font/regular/wildwordsbold.ttf</file>
+        <file>asset/font/regular/wildwordsbolditalic.TTF</file>
+        <file>asset/font/regular/wildwordsitalic.TTF</file>
+        <file>asset/font/regular/wildwordsroman.TTF</file>
+        <file>asset/font/sfx/another.ttf</file>
+        <file>asset/font/sfx/bigfish.ttf</file>
+        <file>asset/font/sfx/TrashHand.TTF</file>
+        <file>asset/font/sfx/Vnhltfap.ttf</file>
     </qresource>
 </RCC>
