--- a/gui/Transcan/stylesheet.qss
+++ b/gui/Transcan/stylesheet.qss
@@ -68,7 +68,7 @@ QLabel {
 .QFrame, QListView, QGroupBox::indicator, .ClusterStyleConfig {
     background: rgba(189, 189, 189, 0.1);
     border: 1px solid #BDBDBD;
-    border-radius: 10px
+    border-radius: 10px;
 }
 QGroupBox::title {
     font-size: 12px;
@@ -92,6 +92,29 @@ QListView::item {
 QListView::item:selected {
     border: none;
     background: rgba(238, 238, 238, 0.1);
+}
+
+QTabWidget::pane {
+  border: none;
+}
+
+QTabBar::tab {
+  background: #00B5FF;
+  border: none;
+  padding: 5px 10px;
+  color: white;
+  font-weight: bold;
+  border: none;
+}
+
+QTabBar::tab:selected {
+  background: white;
+  margin-bottom: -1px;
+  color: black;
+}
+
+QListView::item:hover {
+    background-color: #EAEAEA;
 }
 
 /* Home Page */
@@ -194,4 +217,36 @@ APropertyTab QLabel {
 #NotificationLabel {
     font-size: 12px;
     font-weight: bold;
+}
+
+/*** FONT SELECT WIDGET ***/
+
+#FontSelectWidget {
+    background: #D9D9D9;
+    border-radius: 4px;
+
+    font-family: 'Inder';
+    padding-left: 7px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #000000;
+
+    height: 30px;
+}
+#FontSelectWidget > #FontSelectWidgetOpenChar {
+    color: #404040;
+    font-size: 10px;
+}
+
+#FontSelectListWidget {
+    border-radius: 0px;
+    background-color: #EAEAEA;
+}
+
+#FontSelectListWidget QListView {
+    border-radius: 0px;
+    background-color: white;
+    border: none;
 }
