--- a/gui/Transcan/ui/home_page.ui
+++ b/gui/Transcan/ui/home_page.ui
@@ -483,20 +483,24 @@ color: rgb(46, 52, 54);
               </property>
              </widget>
             </item>
-            <item row="8" column="0">
-             <widget class="QLabel" name="fontLabel">
-              <property name="text">
-               <string>Default font</string>
-              </property>
-             </widget>
-            </item>
-            <item row="8" column="1">
-             <widget class="QFontComboBox" name="fontComboBox"/>
-            </item>
             <item row="9" column="1">
              <widget class="QPushButton" name="submitButton">
               <property name="text">
                <string>Create</string>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="1">
+             <layout class="QVBoxLayout" name="fontSelectLayout">
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+             </layout>
+            </item>
+            <item row="7" column="0">
+             <widget class="QLabel" name="fontLabel">
+              <property name="text">
+               <string>Default font</string>
               </property>
              </widget>
             </item>
